Drupal.org review issue 2719209 fixed.

--- a/config/install/feedback_simple.settings.yml
+++ b/config/install/feedback_simple.settings.yml
@@ -2,8 +2,7 @@ feedback_simple:
   enabled: TRUE
   link: contact
   target: _self
-  class:
-    0: feedback_simple
+  class: feedback_simple
   align: right
   top: 75%
   image: ''
