Added configuration link

--- a/feedback_simple.info.yml
+++ b/feedback_simple.info.yml
@@ -2,3 +2,4 @@ name: 'Feedback Simple'
 description: 'A very simple, very light, CSS only Feedback tab.'
 core: 8.x
 type: module
+configure: feedback_simple.system_settings
